--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">CurrencyConventer</string>
+    <string name="app_name">CurrencyConverter</string>
     <string-array name="currency_codes">
         <item>KGS</item>
         <item>RUB</item>
         <item>USD</item>
         <item>SAR</item>
         <item>EUR</item>
+        <item>TRY</item>
     </string-array>
 </resources>
